fixed bugs: search dropdown, removed textTruncate function..

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,11 @@ input:-webkit-autofill:active {
     rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+
+/* Cut off text style */
+.cutoff-text {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
